Setting up the local database

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,39 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <FrameLayout
+       <include layout="@layout/show_list_layout" />
+
+        <RelativeLayout
+            android:id="@+id/errorLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/mainActFragmentLayout"/>
+            android:visibility="gone">
+            <TextView
+                android:id="@+id/errorText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/connectionError"
+                android:layout_centerInParent="true"
+                android:textColor="@color/grey"
+                android:textAlignment="center"
+                android:textSize="@dimen/xs22"
+                android:textAllCaps="false"
+                android:textStyle="italic"
+                android:fontFamily="cursive"/>
+            <Button
+                android:id="@+id/retryBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/xs16"
+                android:text="@string/tryAgain"
+                android:background="@drawable/retry_background"
+                android:textStyle="normal"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/errorText"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:layout_marginTop="@dimen/x16"/>
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -45,5 +74,4 @@
         app:itemIconTint="@color/colorPrimaryDark"
         app:itemTextColor="@color/colorPrimary"
         app:menu="@menu/activity_main_drawer" />
-
 </android.support.v4.widget.DrawerLayout>
