--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#000000</color>
     <color name="grey">#bdbdbd</color>
     <color name="darkGreen">#27ae60</color>
-    <color name="lightGreen">#B3C833</color>
+    <color name="lightGreen">#02CCBA</color>
 </resources>
