--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -66,7 +66,7 @@
                     app:circle_end_color="@color/colorAccent"
                     app:icon_size="@dimen/x32"
                     app:anim_scale_factor="2"
-                    app:is_enabled="true" />
+                    app:is_enabled="false" />
             </RelativeLayout>
 
             <FrameLayout
