--- a/app/src/main/res/layout/fragment_fav.xml
+++ b/app/src/main/res/layout/fragment_fav.xml
@@ -5,21 +5,21 @@
     android:layout_height="match_parent"
     tools:context=".fragments.FavFragment">
 
+    <ProgressBar
+        android:id="@+id/fragmentPbAtFav"
+        android:layout_width="@dimen/x32"
+        android:layout_height="@dimen/x32"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        android:layout_marginBottom="@dimen/x12"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragmentRvAtFav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/x4"
+        android:layout_below="@id/fragmentPbAtFav"
         android:layout_marginBottom="@dimen/x4" />
-
-    <ProgressBar
-        android:id="@+id/fragmentPbAtFav"
-        android:layout_width="@dimen/x22"
-        android:layout_height="@dimen/x22"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/fragmentRvAtMv"
-        android:visibility="gone"
-        android:layout_marginBottom="@dimen/x12"/>
 
     <RelativeLayout
         android:id="@+id/errorLayoutAtFav"
@@ -38,15 +38,6 @@
             android:textStyle="italic"
             android:fontFamily="cursive"
             android:id="@+id/useLessSix"/>
-        <ImageButton
-            android:id="@+id/retryAtFav"
-            android:layout_width="@dimen/x48"
-            android:layout_height="@dimen/x48"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/baseline_refresh_black_18dp"
-            android:background="@color/white"
-            android:layout_above="@id/useLessSix"
-            android:layout_marginBottom="@dimen/x4"/>
     </RelativeLayout>
 
 </RelativeLayout>
